# rust-catalyst-example

./: Cargo.toml  Readme.md  build.rs  make_fat.sh  test1_rust.h
XcodeIntegration/XcodeIntegration/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift  XcodeIntegration.h
XcodeIntegration/XcodeIntegration.xcodeproj/: project.pbxproj
XcodeIntegration/XcodeIntegration.xcodeproj/project.xcworkspace/xcuserdata/terhechte.xcuserdatad/: UserInterfaceState.xcuserstate
XcodeIntegration/XcodeIntegration.xcodeproj/xcuserdata/terhechte.xcuserdatad/xcschemes/: xcschememanagement.plist
XcodeIntegration/XcodeIntegration/Rust/: test1_rust.h
src/: lib.rs
