[package]
name = "test1"
version = "0.1.0"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test1"
crate-type = ["staticlib", "lib"]

[build-dependencies]
cbindgen = "*"

[dependencies]
lazy_static = "1.4.0"
twox-hash = "1.5.0"
foreign-types = "*"
libc = "*"

[profile.dev]
panic = 'unwind'

[profile.release]
panic = 'unwind'

