[package]
name = "test1"
version = "0.1.0"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test1"
crate-type = ["staticlib"] 

[build-dependencies]
cbindgen = "*"

[dependencies]

[profile.dev]
panic = 'unwind'

[profile.release]
panic = 'unwind'

